--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Carlos Castro Consulting
+title: Carlos Castro Consulting (C3)
 email: carlos.castro.consulting@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -33,6 +33,21 @@ github_username:  jekyll
 theme: minima
 plugins:
   - jekyll-feed
+
+# Defaults
+defaults:
+  - scope:
+      path: "assets/img"
+    values:
+      image: true
+
+show_excerpts: true 
+
+header_pages:
+ - projects.md
+ - about.md
+
+landing_image_name: "DSC_0674.JPG"
 
 # Exclude from processing.
 # The following items will not be processed, by default.
